--- a/ProgettoLube/frontend/dashboard/src/css/App.css
+++ b/ProgettoLube/frontend/dashboard/src/css/App.css
@@ -1,11 +1,12 @@
 .App {
   text-align: center;
 
-  height: 90vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   /* justify-content: space-between; */
   background-color: ghostwhite;
+  /* overflow-y:scroll; */
 
   
 }
@@ -65,6 +66,7 @@ a.Link::after {
   height: 65vh; 
   display: flex;
   justify-content: center;
+
 }
 
 .ImgHeight {
@@ -103,7 +105,13 @@ a.Link::after {
 
 .Ricerca {
   /* border: 1px solid rgb(255, 0, 0); */
+  margin: 1vh;
+  padding: 1vh;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  align-self: center;
+  border-radius: 25px;
   background-color: #fff;
+  width: 90%;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -132,6 +140,7 @@ a.Link::after {
 }
 .InputGroup{
   padding: 10px 0;
+  justify-content: space-between;
 }
 
 
@@ -141,13 +150,16 @@ a.Link::after {
 
 
 .cardsContainer{
-  margin-top:3%;
+  /* margin-top:3%;
   margin-bottom:12%;
-overflow-y:scroll;
+  overflow-y:scroll;
   height: 75vh;
-  display: flex;
+  
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-around; */
  /* border: 1px solid black;  */
+  display: flex;
+  justify-content: center;
 }
+
 
