--- a/ProgettoLube/frontend/dashboard/src/css/Footer.css
+++ b/ProgettoLube/frontend/dashboard/src/css/Footer.css
@@ -7,7 +7,7 @@
     background-color: indianred;
     color: #fff;
     text-align: center;
-    position: fixed;
+    /* position: fixed; */
     bottom:0;
     
    
