--- a/ProgettoLube/frontend/dashboard/src/css/App.css
+++ b/ProgettoLube/frontend/dashboard/src/css/App.css
@@ -245,6 +245,12 @@ a.Link::after {
   width: 10px;
   height: 10px;
 }
+.TabellaFittizia {
+  height: 35vw;
+  background-color: #fff;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-top: 30px;
+}
 
 /* ********************************* 
           IMPOSTAZIONI
