--- a/ProgettoLube/frontend/dashboard/src/css/App.css
+++ b/ProgettoLube/frontend/dashboard/src/css/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
-
-  height: 100%;
+  position: relative;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   /* justify-content: space-between; */
@@ -204,22 +204,24 @@ a.Link::after {
 ********************************* */
 .AppDettReport {
   text-align: center;
+  position: relative;
   height: 100%;
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   justify-content: space-around; 
   align-items: center;
   background-color: ghostwhite;
-  overflow-y:scroll; 
+  /*overflow-y:scroll;*/ 
 }
 .ContainerGriglia {
   /* border: 1px solid black; */
   width: 90vw;
-  height: 75vh;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  
 }
 .CardDR {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
